# harness-google-sheet

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/create-beelink-repo/: SKILL.md
.github/workflows/: ci.yml
appsscript/: Code.gs  README.md
deploy/: install.sh
docs/: vision.md
openspec/: project.md
openspec/changes/add-agent-stall-watchdog/: proposal.md  tasks.md
openspec/changes/add-friend-share-cli/: proposal.md  tasks.md
openspec/changes/add-friend-sheets/: proposal.md  tasks.md
openspec/changes/optimize-sheet-reads/: proposal.md  tasks.md
openspec/changes/polish-for-community/: proposal.md  tasks.md
openspec/changes/raise-agent-timeout/: proposal.md  tasks.md
openspec/changes/share-skills-createrepo-fixes/: proposal.md  tasks.md
openspec/changes/surface-spec-for-review/: proposal.md  tasks.md
openspec/specs/add-existing-repo/: spec.md
openspec/specs/create-new-repo/: spec.md
openspec/specs/daemon-robustness/: spec.md
openspec/specs/repo-chat/: spec.md
scripts/: create_beelink_repo.sh
src/sheet_agent/: __init__.py  __main__.py  agent.py  config.py  log.py  orchestrator.py  repo.py  sheets.py
systemd/: harness-google-sheet.service
tests/: test_add_repo.py  test_appsscript.py  test_chat.py  test_config.py  test_control.py  test_core.py  test_create_repo.py  test_friend_sheets_loop.py  test_friends.py  test_progress.py  test_repo.py  test_result_log.py  test_runs_prune.py  test_sheet_read_batching.py  test_skills.py  test_spec_id.py  test_spec_review.py  test_stall_watchdog.py
(+20 files in other folders)
