[project]
name = "harness-google-sheet"
version = "0.1.0"
description = "Autonomous agent orchestrator driven by a Google Sheet control plane (OpenSpec-only projects)"
requires-python = ">=3.11"
dependencies = [
    "gspread>=6.1.0",
    "google-auth>=2.30.0",
    "python-dotenv>=1.0.1",
    "tenacity>=8.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
sheet-agent = "sheet_agent.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
# Default rule set (E4/E7/E9 + F) — pyflakes correctness + a few pycodestyle
# checks. We deliberately do NOT enable E501 (line length): the code uses long,
# deliberate explanatory comments that are not worth reflowing.
extend-exclude = [".venv", "state", ".autopilot"]
